[workspace]
resolver = "2"
members = [
    "dex-tokenomics/*",
    "dex/*",
    "egg/*",
    "packages/*",
    "wormhole/*",
]

[workspace.dependencies]
anyhow = "1.0.65"
assert_matches = "1.5.0"
cosmwasm-std = "1.0.0"
ethabi = "17.2.0"
eyre = "0.6.8"
hex = "0.4.3"
proptest = "1.0.0"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_json = "1.0.85"
sha3 = "0.10.5"
thiserror = "1.0.35"
xcci = { path = "packages/xcci" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
