[workspace]
resolver = "2"
members = [
    "claims/*",
    "compass/*",
    "egg/*",
    "packages/*",
]

[workspace.dependencies]
anyhow = "1.0.65"
assert_matches = "1.5.0"
borsh = "0.9.3"
borsh-derive = "0.9.3"
bytemuck = "1.12.1"
cosmwasm-schema = "1.0.0"
cosmwasm-std = { version = "1.2.1", features = ["abort"] }
cosmwasm-storage = "1.2.1"
cosmwasm-vm = { version = "1.2.1", default-features = false }
cw-multi-test = "0.16.2"
cw-storage-plus = "1.0.1"
cw0 = "0.10.3"
cw1 = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
cw20-wrapped-2 = { path = "wormhole/cw20-wrapped", features = ["library"] }
ethabi = "18.0.0"
eyre = "0.6.8"
generic-array = "0.14.5"
getrandom = { version = "0.2.7", default-features = false, features = ["custom", "js"] }
hex = "0.4.3"
itertools = "0.10.5"
k256 = { version = "0.12.0" }
num-derive = "0.3.3"
num-traits = "0.2.15"
proptest = "1.0.0"
protobuf = { version = "2.28.0", features = ["with-bytes"] }
rand = "0.8.5"
ring = "0.16.20"
schemars = "0.8.10"
secp256k1 = "0.26.0"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_derive = "1.0.140"
serde_json = "1.0.85"
sha3 = "0.10.5"
terraswap = "2.8.0"
thiserror = "1.0.35"
uint = "0.9.4"
xcci = { path = "packages/xcci" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
