[package]
name = "evm-receiver"
version = "0.1.0"
edition = "2021"
description = "Receive EVM communication on Paloma"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
byteorder = "1.4.3"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
ethabi = "17.1.0"
eyre = "0.6.8"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
sha3 = "0.10.1"

[dev-dependencies]
