[package]
name = "signed_claims"
version = "0.1.0"
edition = "2021"
description = "For registering rewards claims"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
eyre.workspace = true
hex.workspace = true
schemars.workspace = true
serde-json-wasm = "0.5.0"
serde.workspace = true

[dev-dependencies]
cosmwasm-schema.workspace = true
