[package]
name = "simple-claims"
version = "0.1.0"
edition = "2021"
description = "For dictionary base claims/rewards."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
eyre.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
cosmwasm-schema.workspace = true
serde_json.workspace = true
