[package]
name = "compass-cw"
version = "0.1.0"
edition = "2021"
description = "A cosmwasm compass contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
ring.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
cosmwasm-schema.workspace = true
secp256k1 = { workspace = true, features = ["bitcoin_hashes", "rand-std"] }
