[package]
name = "astroport-token"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Astroport ASTRO token"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = { version = "1.0.0", features = ["iterator"] }
cw2 = "0.13.2"
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
