[package]
name = "astroport-maker"
version = "1.0.1"
authors = ["Astroport"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = "1.0.0"
cw-storage-plus = { version = "0.13.4", features = ["iterator"] }
cw2 = "0.13.4"
cw20 = "0.13.4"
schemars = "0.8.10"
serde = { version = "1.0.138", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
astroport-escrow-fee-distributor = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main"  }
astroport-factory = {path = "../../dex/factory"}
astroport-governance = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main"  }
astroport-pair = {path = "../../dex/pair"}
astroport-token = {path = "../../dex/token"}
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
