[package]
name = "astroport-vesting"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = "1.0.0"
cw-storage-plus = { version = "0.13.4", features = ['iterator'] }
cw2 = "0.13.4"
cw20 = "0.13.4"
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
astroport-token = {path = "../../dex/token"}
cosmwasm-schema = { version = "1.0.0", default-features = false }
cw-multi-test = "0.13.4"
