[package]
name = "astroport-vesting"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
astroport-token = {path = "../../dex/token"}
cosmwasm-schema.workspace = true
cw-multi-test.workspace = true
