[package]
name = "astroport-token"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Astroport ASTRO token"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
cosmwasm-schema.workspace = true
