[package]
name = "astroport-whitelist"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = "0.13.4"
cw0 = "0.10.3"
cw1 = "0.13.4"
cw2 = "0.13.4"
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
anyhow = "1.0.58"
assert_matches = "1.5.0"
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
derivative = "2.2.0"
