[package]
name = "astroport-whitelist"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = "0.13.4"
cw1 = "0.13.4"
cw2 = "0.13.4"
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
derivative = "2.2.0"
