[package]
name = "astroport-whitelist"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw1.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
cosmwasm-schema.workspace = true
cw-multi-test.workspace = true
derivative = "2.2.0"
