[package]
name = "robin"
version = "0.1.0"
edition = "2021"
description = "A realized ultimate reality foreign chain contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.4"
ethabi = "17.1.0"
eyre = "0.6.8"
hex = "0.4.3"
rand = "0.8.5"
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
serde_json = "1.0.82"
