[package]
name = "robin"
version = "0.1.0"
edition = "2021"
description = "A realized ultimate reality foreign chain contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
eyre.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true
xcci.workspace = true

[dev-dependencies]
cosmwasm-schema = "1.0.0"
serde_json.workspace = true
