[package]
authors = []
edition = "2021"
name = "solana-geyser"
description = "Geyser plugin for paloma"
version = "1.11.1"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.7.2"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
message-types = { path = "../message_types" }
redis = "0.21.5"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.74"
solana-geyser-plugin-interface = "1.11.5"
solana-logger = "1.11.5"
solana-measure = "1.11.5"
solana-metrics = "1.11.5"
solana-runtime = "1.11.5"
solana-sdk = "1.11.5"
solana-transaction-status = "1.11.5"
toml = "0.5.9"

[dev-dependencies]
libc = "0.2.112"
libloading = "0.7.2"
serial_test = "0.5.1"
solana-account-decoder = "1.11.5"
solana-core = "1.11.5"
solana-local-cluster = "1.11.5"
solana-net-utils = "1.11.5"
solana-streamer = "1.11.5"
tempfile = "3.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
