[package]
name = "cw20-legacy"
version = "0.2.0"
authors = ["Mohammadsadegh Najafi <MSNTCS@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token compatible with Columbus-4 token"
license = "Apache-2.0"
repository = "https://github.com/palomachain/palomadex"
documentation = "https://github.com/palomachain/palomadex/wormhole/cw20-legacy/README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
cw-utils = {version = "0.13.4"}
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = "0.13.4"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
