[package]
name = "cw20-wrapped-2"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2021"
description = "Wrapped CW20 token contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
schemars.workspace = true
serde.workspace = true
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] } 
cw-storage-plus  = "0.13.4"
thiserror.workspace = true
