[package]
name = "cw20-wrapped-2"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2021"
description = "Wrapped CW20 token contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
schemars.workspace = true
serde.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw-storage-plus  = "0.13.4"
thiserror.workspace = true
