[package]
name = "cw721-wrapped"
version = "0.10.1"
edition = "2018"
description = "Wrapped CW721 token contract"

exclude = [
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
cw2 = "0.13.4"
cw721 = { path = "../../packages/cw721", version = "0.10.1" }
cw721-base = { path = "../cw721-base", version = "0.10.0", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
