[package]
name = "mock-bridge-integration-2"
version = "0.1.0"
edition = "2021"
description = "Mock Bridge Integration for Transfer w/ Payload"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
cw20-wrapped-2 = { path = "../cw20-wrapped", features = ["library"] }
generic-array = "0.14.5"
hex = "0.4.3"
k256 = { version = "0.9.4", default-features = false, features = ["ecdsa"] }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.1", default-features = false }
terraswap = "2.7.0"
thiserror = "1.0.31"

wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }
token-bridge-paloma = { path = "../token-bridge", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false }
serde_json = "1.0.82"
