[package]
name = "mock-bridge-integration-2"
version = "0.1.0"
edition = "2021"
description = "Mock Bridge Integration for Transfer w/ Payload"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
cw20-wrapped-2 = { path = "../cw20-wrapped", features = ["library"] }
generic-array = "0.14.5"
hex.workspace = true
k256 = { version = "0.9.4", default-features = false, features = ["ecdsa"] }
schemars.workspace = true
serde.workspace = true
sha3.workspace = true
terraswap = "2.7.0"
thiserror.workspace = true

wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }
token-bridge-paloma = { path = "../token-bridge", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false }
serde_json.workspace = true
