[package]
name = "mock-bridge-integration-2"
version = "0.1.0"
edition = "2021"
description = "Mock Bridge Integration for Transfer w/ Payload"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw20-base.workspace = true
cw20-wrapped-2.workspace = true
cw20.workspace = true
generic-array.workspace = true
hex.workspace = true
k256.workspace = true
schemars.workspace = true
serde.workspace = true
sha3.workspace = true
terraswap.workspace = true
thiserror.workspace = true
token-bridge-paloma = { path = "../token-bridge", features = ["library"] }
wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }

[dev-dependencies]
cosmwasm-vm.workspace = true
serde_json.workspace = true
