[package]
name = "p2w-sdk"
version = "0.1.1"
authors = ["Wormhole Contributors <contact@certus.one>"]
edition = "2021"
description = "Pyth to Wormhole SDK"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
pyth-sdk = "0.4.2"
pyth-sdk-solana = { path = "../pyth-sdk-solana" }
serde = { version = "1.0.139", default-features = false, features = ["derive"] }
