[package]
name = "p2w-sdk"
version = "0.1.1"
authors = ["Wormhole Contributors <contact@certus.one>"]
edition = "2021"
description = "Pyth to Wormhole SDK"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex.workspace = true
pyth-sdk = "0.4.2"
pyth-sdk-solana = { path = "../pyth-sdk-solana" }
serde.workspace = true
