[package]
name = "pyth-bridge"
version = "0.1.0"
authors = ["Wormhole Contributors <contact@certus.one>"]
edition = "2021"
description = "Pyth price receiver"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
generic-array = "0.14.5"
hex.workspace = true
k256 = { version = "0.9.6", default-features = false, features = ["ecdsa"] }
p2w-sdk = { path = "../p2w-sdk" }
pyth-sdk = "0.4.2"
schemars.workspace = true
serde.workspace = true
serde_derive = "1.0.140"
sha3.workspace = true
thiserror.workspace = true
wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false }
serde_json.workspace = true
