[package]
name = "pyth-bridge"
version = "0.1.0"
authors = ["Wormhole Contributors <contact@certus.one>"]
edition = "2021"
description = "Pyth price receiver"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
generic-array.workspace = true
hex.workspace = true
k256.workspace = true
p2w-sdk = { path = "../p2w-sdk" }
pyth-sdk = "0.4.2"
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
sha3.workspace = true
thiserror.workspace = true
wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }

[dev-dependencies]
cosmwasm-vm.workspace = true
serde_json.workspace = true
